--- a/.gitconfig
+++ b/.gitconfig
@@ -43,5 +43,5 @@
 
 # Any GitHub repo with my username should be checked out r/w by default
 # http://rentzsch.tumblr.com/post/564806957/public-but-hackable-git-submodules
-[url "git@github.com:addyosmani/"]
-  insteadOf = "git://github.com/addyosmani/"
+[url "git@github.com:timeu/"]
+  insteadOf = "git://github.com/timeu/"
