--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,3 +30,23 @@ set-option -g display-panes-colour colour166 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
+
+bind-key C-a last-window
+
+# Start numbering at 1
+set -g base-index
+
+# Allows for faster key repetition
+ set -s escape-time 0
+
+# Rather than constraining window size to the maximum size of any client 
+# # connected to the *session*, constrain window size to the maximum size of any 
+# # client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
+
+# Allows us to use C-a a <command> to send commands to a TMUX session inside 
+# # another TMUX session
+bind-key a send-prefix
+
+# Highlight active window
+set-window-option -g window-status-current-bg red
